<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.academic.city.sdmd.foodnetwork.ui.fragment.MealDetailsFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <include layout="@layout/toolbar_layout"
                android:id="@+id/toolbar" />

            <TextView
                android:id="@+id/tv_meal_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/toolbar"
                tools:text="24/05/2017"/>

            <TextView
                android:id="@+id/tv_meal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/toolbar"
                android:layout_toLeftOf="@id/tv_meal_creation_date"
                android:layout_toStartOf="@id/tv_meal_creation_date"
                android:textSize="20sp"
                tools:text="Pasta Pesto"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_meal_title"
                />

            <TextView
                android:id="@+id/tv_meal_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                tools:text="Just order in, it's easier."/>

            <TextView
                android:id="@+id/tv_number_of_servings_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_meal_recipe"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_servings"/>

            <TextView
                android:id="@+id/tv_number_of_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_number_of_servings_header"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_number_of_servings_header"
                android:layout_toRightOf="@id/tv_number_of_servings_header"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="2"/>

            <TextView
                android:id="@+id/tv_prep_time_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_number_of_servings_header"
                android:layout_marginTop="10dp"
                android:text="@string/prep_time"/>

            <TextView
                android:id="@+id/tv_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_prep_time_header"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_prep_time_header"
                android:layout_toRightOf="@id/tv_prep_time_header"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="0:10"/>

            <TextView
                android:id="@+id/tv_upvote_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_prep_time"
                android:layout_marginTop="10dp"
                android:text="@string/upvote_header"/>

            <TextView
                android:id="@+id/tv_upvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_upvote_header"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/tv_upvote_header"
                android:layout_toRightOf="@id/tv_upvote_header"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text=""/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_upvote"
                />
            <Button
                android:id="@+id/upvoteButton"
                android:layout_below="@id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
